# Olympus

./: .gitignore  CMakeLists.txt  justfile
build_image/: Containerfile
qml/components/: AppTile.qml  Button.qml  qmldir
qml/view/: AppPage.qml  ControllerConfig.qml  Home.qml  Main.qml  qmldir
src/: main.cpp
